# a2a-code-sentinel

./: .gitignore  OLLAMA_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh  verify_setup.py
agents/: __init__.py  best_practices_agent.py  llm_client.py  orchestrator.py  performance_agent.py  security_agent.py
examples/: maintainability_example.py  performance_issues_example.py  vulnerable_code_example.py
messaging/: __init__.py  message.py
tests/: test_agents.py
